--- a/README.html
+++ b/README.html
@@ -22,7 +22,6 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-1.1/textmate.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-1.1/highlight.js"></script>
-<link href="site_libs/font-awesome-4.5.0/css/font-awesome.min.css" rel="stylesheet" />
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -209,32 +208,9 @@ $(document).ready(function () {
 </div>
 
 
-<div id="section" class="section level1">
-<h1></h1>
-<div id="student-web-pages-from-ds-i-fall-2017" class="section level2">
-<h2>Student Web Pages from DS I Fall 2017</h2>
-<ul>
-<li><a href="http://samanthagiardina.github.io">Sam</a></li>
-<li><a href="http://megangillis.github.io">Megan</a></li>
-<li><a href="http://xanhendrix.github.io">Xan</a></li>
-<li><a href="http://mitchell-holman.github.io">Mitch</a></li>
-<li><a href="http://bowenjones.github.io">Bowen</a></li>
-<li><a href="http://laswhannah.github.io">Hannah</a></li>
-<li><a href="http://kellyloucks.github.io">Kelly</a></li>
-<li><a href="http://andrewmartinsmith.github.io">Andrew</a></li>
-<li><a href="http://mccaskey.github.io">Matt</a></li>
-<li><a href="http://murrayln3.github.io">Lauren</a></li>
-<li><a href="http://sampshyk.github.io">Sammy</a></li>
-<li><a href="http://davidross3.github.io">David</a></li>
-<li><a href="http://southernt.github.io">Tucker</a></li>
-<li><a href="http://spellkp.github.io">Paige</a></li>
-<li><a href="http://wheelercat.github.io">Cathryn</a></li>
-<li><a href="http://samanthawidman.github.io">Samantha</a></li>
-</ul>
-</div>
-<div id="the-end" class="section level2">
-<h2>The End</h2>
-</div>
+<div id="fall17ds1" class="section level1">
+<h1>fall17DS1</h1>
+<p>Student web page links</p>
 </div>
 
 
