--- a/index.html
+++ b/index.html
@@ -204,10 +204,10 @@ $(document).ready(function () {
 <li><a href="http://xanhendrix.github.io">Xan</a></li>
 <li><a href="http://mitchell-holman.github.io">Mitch</a></li>
 <li><a href="http://bowenjones.github.io">Bowen</a></li>
-<li><a href="http://laswhannah.github.io">Hannah</a></li>
+<li><a href="http://lawshannah.github.io">Hannah</a></li>
 <li><a href="http://kellyloucks.github.io">Kelly</a></li>
 <li><a href="http://andrewmartinsmith.github.io">Andrew</a></li>
-<li><a href="http://mccaskey.github.io">Matt</a></li>
+<li><a href="http://mccaskeymj.github.io">Matt</a></li>
 <li><a href="http://murrayln3.github.io">Lauren</a></li>
 <li><a href="http://sampshyk.github.io">Sammy</a></li>
 <li><a href="http://davidross3.github.io">David</a></li>
